cros-ide: filtering logs
Add a filtering function which can filter logs by any words.

BUG=b:243322165
TEST=TBD

Change-Id: I896d56371f057381c766edef9bed683b39be19b5
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3894094
Reviewed-by: Shuhei Takahashi <nya@chromium.org>
Commit-Queue: Tamami Hata <tamamih@google.com>
Tested-by: Tamami Hata <tamamih@google.com>

--- a/cros-ide/views/static/syslog.html
+++ b/cros-ide/views/static/syslog.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="syslog.css">
   </head>
   <body>
+    <input name="filter" id="filter" value="" />
+    <!-- <button id="btn">search</button> -->
     <div id="main" data-syslog-url="%SYSLOG_URL_ESCAPED_FOR_ATTR%"></div>
     <script src="syslog.js"></script>
   </body>
