cros-ide: Using fixed-width fonts
Change to use fixed-width fonts in table.

BUG=b:247663026
TEST=chrome-extension://ehoadneljpdggcbbknedodolkkjodefl/capture.html

Change-Id: I18ad02b6d1159300481518d8606a13fd9e49eb6b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3907223
Commit-Queue: Tamami Hata <tamamih@google.com>
Reviewed-by: Shuhei Takahashi <nya@chromium.org>
Tested-by: Tamami Hata <tamamih@google.com>
Reviewed-by: Qijiang Yūki Ishii <fqj@google.com>

--- a/cros-ide/views/static/syslog.css
+++ b/cros-ide/views/static/syslog.css
@@ -11,8 +11,10 @@ html, body {
 
 table {
   border-collapse:  collapse;
+  font-family: monospace;
 }
 
 th,td {
   border: solid 0.1px;
+  padding: 2px;
 }
