--- a/cros-ide/views/static/vnc.html
+++ b/cros-ide/views/static/vnc.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Set the base URL. -->
-    <base href="%EXTENSION_ROOT_URL%/dist/views/">
+    <base href="%EXTENSION_ROOT_URL%/dist/views/" />
 
-    <title>CrOS IDE VNC Client</title>
-    <link rel="stylesheet" href="vnc.css">
+    <title>ChromiumIDE VNC Client</title>
+    <link rel="stylesheet" href="vnc.css" />
   </head>
   <body>
     <div id="loading"><div class="spinner"></div></div>
